# FPSSS

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build-debug.sh  build-release.sh  build.sh  jaccard.py  main.cpp
fasta/: CMakeLists.txt
fasta/Examples/: main.c
filter/: CMakeLists.txt  filter.cpp  filter.h
lis/: CMakeLists.txt  lis.cpp  lis.h
minimizer/: CMakeLists.txt  lshbox.h  minimizer.cpp  minimizer.h
minimizer/lshbox/lsh/: rbslsh.h
opal/: CMakeLists.txt  ScoreMatrix.cpp  ScoreMatrix.hpp
scripts/: chompTo60.pl  jaccard.py  to5.pl
